REL11-34: fix scrollbar in IE11

--- a/src/main/webapp/app/components/card-modal/card-modal.css
+++ b/src/main/webapp/app/components/card-modal/card-modal.css
@@ -5,8 +5,6 @@
     max-width: 90%;
     max-height: 90%;
     box-sizing: border-box;
-    overflow-y: hidden;
-    overflow-x: hidden;
 }
 
 .lvg-card-modal__background {
