--- a/src/main/webapp/app/components/card/card.css
+++ b/src/main/webapp/app/components/card/card.css
@@ -1,12 +1,6 @@
-/*
-	- contains card style
-*/
-
-/*
-===================================
-==== misc =========================
-===================================
-*/
+lvg-component-card {
+    display: block;
+}
 
 .lavagna-closed-card {
 	color: #999;
